# ThermodynamicAnalyticsToolkit

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  README.md  bootstrap.sh  configure.ac  index.html
doc/: Doxyfile  Makefile.am  am_doxygen_include.am  py_filter.in
doc/userguide/: Makefile.am  bibliography.txt  bibliography.xml  catalog.xml.in  glossary.adoc  glossary.txt  glossary.xml  introduction.adoc  introduction.txt  programmersguide.txt  programmersguide_computational_graph.txt  programmersguide_debugging_tips.txt  programmersguide_extensions_samplers.txt  programmersguide_neural_networks.txt  programmersguide_tati_buildsystem.txt  programmersguide_tati_structure.txt  programmersguide_tati_versioncontrol.txt  programmersguide_tensorflow.txt  programmersguide_tensorflow_flaws.txt  quickstart.adoc  quickstart.txt  quickstart_cmdline.txt  quickstart_sampling.txt  quickstart_simulation.txt  reference.txt  reference_examples.txt  reference_examples_harmonic_oscillator.txt  reference_implementing_sampler.txt  reference_samplers.txt  reference_simulation.txt  reference_simulation_harmonic_oscillator.txt  roadmap.txt  simulation.txt  styleguide.txt  tensorflow_flaws.adoc  tensorflow_flaws.txt  userguide.adoc  userguide.txt  userguide.xml  userguide_introduction.txt  (+11 more)
doc/userguide/cmdline/: analyse_average.sh  analyse_covariance.sh  analyse_diffmap.sh  analyse_free_energy.sh  exploring.sh  inputspacesampler.sh  lossfunctionsampler-exclude_parameters-fixed.sh  lossfunctionsampler-exclude_parameters.sh  lossfunctionsampler-fix_parameter.sh  lossfunctionsampler-grid.sh  lossfunctionsampler-trajectory.sh  optimize.sh  parse_dataset.sh  sample.sh  write_dataset.sh
doc/userguide/pictures/: computational_graph.tex  pass-thru_node.tex  tati-mindmap.tex  tati_simulations-architecture.tex  tati_tools-architecture.tex
doc/userguide/python/: analyse.py  analyse_averages.py  analyse_covariance.py  analyse_diffmap.py  eval_loss_gradient.py  explore.py  exploring.py  fix_parameter.py  optimize.py  optimize_sample.py  plot_optimize.py  sample.py  supply_dataset.py  tati_version.py  tf_helloworld.py  writing_data.py
doc/userguide/simulation/: change_dataset_array.py  change_dataset_csv.py  evaluate_accuracy.py  evaluate_dataset.py  evaluate_gradients.py  evaluate_hessians.py  evaluate_loss.py  evaluate_predict.py  fit.py  fix_parameter.py  get_activations.py  get_losses.py  get_options.py  initializing_momenta.py  requesting_momenta.py  requesting_parameters.py  sample.py  setting_momenta.py  setting_momenta_walkers.py  setting_parameters.py  setting_parameters_walkers.py  setting_up_network.py  supply_dataset_array.py  supply_dataset_csv.py
src/: DDSAnalyser.in  DDSExplorer.in  DDSOptimizer.in  DDSampler.in  DataDrivenSampler.py  DataOptimizer.py  DatasetParser.in  DatasetWriter.in  GradientDescent.py  InputSpaceSampler.in  LossFunctionSampler.in  LossFunctionSampler.py  Makefile.am  NumericalDiff.in  SGLDMomentumSampler.py  TATiAnalyser.in  TATiDatasetParser.in  TATiDatasetWriter.in  TATiExplorer.in  TATiInputSpaceSampler.in  TATiLossFunctionSampler.in  TATiOptimizer.in  TATiSampler.in  TrajectoryAnalyser.py  classification_datasets.py  classificationdatasets.py  common.py  dataset.py  helpers.py  main_diffusionMap.ipynb  neuralnetwork.py  playground_example.py  run.sh  sgldsampler.py
src/DataDrivenSampler/: Makefile.am  TrajectoryAnalyser.py  common.py
src/DataDrivenSampler/datasets/: Makefile.am  classificationdatasets.py
src/DataDrivenSampler/diffusion_maps/: diffusionmap.py
src/DataDrivenSampler/exploration/: Makefile.am  explorer.py  trajectorydata.py  trajectorydatacontainer.py  trajectoryjob.py  trajectoryjob_analyze.py  trajectoryjob_check_gradient.py  trajectoryjob_check_minima.py  trajectoryjob_extract_minimum_candidates.py  trajectoryjob_prune.py  trajectoryjob_run.py  trajectoryjob_sample.py  trajectoryjob_train.py  trajectoryjobid.py  trajectoryjobqueue.py  trajectoryprocess.py  trajectoryprocess_sample.py  trajectoryprocess_train.py  trajectoryprocessqueue.py  trajectoryqueue.py
src/DataDrivenSampler/models/: Makefile.am  basetype.py  mock_flags.py  (+3 more)
src/TATi/: Makefile.am  TrajectoryAnalyser.py  common.py  model.py  simulation.py
src/datasets/: classificationdatasets.py  dataset.py
src/diffusion_maps/: Makefile.am  diffusionmap.py  model.py
src/documentation/: Makefile.am  autotools.dox  components.dox  distributables.dox  documentation.dox  install.dox  mainpage.dox  structure.dox  tools.dox  userguide.dox
src/models/: Makefile.am  mock_flags.py  model.py  neuralnetwork.py
src/runtime/: Makefile.am  runtime.py
src/samplers/: GLAFirstOrderMomentumSampler.py  GLASecondOrderMomentumSampler.py  GradientDescent.py  Makefile.am  SGLDMomentumSampler.py  sgldsampler.py
tests/codechecks/: Makefile.am  atlocal.in  testsuite-asciidocs-in-makefile.at  testsuite-date_in_dox.at  testsuite-project-disclaimer.at  testsuite-testsuite-in-makefile.at  testsuite-userguide-examples-in-makefile.at  testsuite.at
tests/integration/: Makefile.am  atlocal.in  testsuite.at
tests/regression/: Makefile.am  atlocal.in  testsuite.at
tests/simulation/: Makefile.am  testsuite-HMC_reference.at  testsuite-accessing_dataset.at  testsuite-accessing_network_without_dataset.at  testsuite-changing_network-adding_layers.at  testsuite-changing_network.at  testsuite-ensemblequasinewton_reference.at  testsuite-fixing_invalid_parameter.at  testsuite-multiple_walkers.at  testsuite-parameters_access.at  testsuite.at
tests/tensorflow/: Makefile.am  atlocal.in  testsuite-cholesky.at  testsuite-get_momenta_slots.at  testsuite-multiple_models.at  testsuite-read_MNIST.at  testsuite-stack_means_cov.at  testsuite-test_assign.at  testsuite-test_covariance.at  testsuite-test_covariance_tf.at  testsuite-test_matrix_vector.at  testsuite-test_stack.at  testsuite-tf_cond.at  testsuite-tf_size.at  testsuite-train_MNIST_pipeline_in_graph.at  testsuite.at
tests/tensorflow_flaws/: Makefile.am  testsuite.at
tests/userguide/: Makefile.am  atlocal.in  testsuite.at
wheel/: Makefile.am  setup.py.in
(+690 files in other folders)
